--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ KITE_API_SECRET=your_kite_api_secret
 KITE_REDIRECT_URL=https://kite.trade
 DB_FILE=kite_bot.db
 
+# AI Analysis (optional - for /analyze command)
+# Get your API key from: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your_google_gemini_api_key
+GEMINI_MODEL=gemini-2.0-flash
