--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "axios": "^1.13.2",
         "better-sqlite3": "^12.5.0",
         "dotenv": "^17.2.3",
